@@ -1,6 +1,6 @@
 
 Version 1.4.5 (07/12/2006) "Blobby"
-  * Upgraded the editor to use Engine Beta 8.1
+  * The editor has been upgraded to now use Engine Beta 8.1.
   * The editor has been upgraded to now use Jgraph 5.9.2.1.
   * Now, when a user selects a single task, the palette menu expands to allow the use to modify the
     split and join decorators for the task, without having to go to the popup menu for the task.
@@ -27,6 +27,7 @@ Version 1.4.5 (07/12/2006) "Blobby"
   * Enhanced the editor so that it now wraps text on labels when labbels get overly long.
   * Enhanced the editor so that the status bar changes to indicate what it's doing when manipulating long-running file operations.
   * Fixed a bug where if you select "Cancel"at the exit confirmation dialog, the window close widget stops working. 
+  * Fixes to the reduction rules and analysis code introduced to speed up processing on certain types of specifications.
 
 Version 1.4.4 (29/11/2006) "MoreMoe"
   * Upgraded the editor to fix some bugs in reset net analysis and to include reduction rules for specification analysis.
